# python-stua

./: .hgignore  .hgtags  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
stua/: __init__.py  commands.py  os.py  vcs.py  version.py
