[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "stua"
description = "Collection of generic python functions and classes."
authors = [
    {name = "Raffaele Salmaso", email = "raffaele.salmaso@gmail.com"},
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = [
    "version",
]

[project.urls]
"Home Page" = "https://pypi.org/project/python-stua/"
Documentation = "https://github.com/rsalmaso/python-stua/blob/main/README.md"
GitHub = "https://github.com/rsalmaso/python-stua"
Changelog = "https://github.com/rsalmaso/python-stua/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/rsalmaso/python-stua/discussions"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "stua.__version__"}

[tool.distutils.bdist_wheel]
universal = false

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C9", # mccabe
    "DJ", # flake8-django
    "E", # pycodestyle
    "F", # pyflakes
    "I", #
    "W", # pycodestyle

]
ignore = [
    "B904", # Within an except clause, raise exceptions with raise ... from err or raise ... from None to
            # distinguish them from errors in exception handling.
    "E722", # Do not use bare except, specify exception instead
]
fixable = [
    "I",
]
unfixable = [
    "F401", # don't remove unused import
]
line-length = 120
target-version = "py38"

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
known-first-party = [
    "stua",
]
order-by-type = false

[tool.ruff.mccabe]
max-complexity = 18
